# src/controllers/request/user.request.ts
@@ -1,0 +1,6 @@
+import { IsMongoId } from "class-validator";
+
+export class FollowingQueryParams {
+  @IsMongoId({ message: "Invalid or missing following id" })
+  followingId: string;
+}
